<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/ic_nav_post"
        android:title="@string/nav_post" />
    <item
        android:id="@+id/nav_pickups"
        android:icon="@drawable/ic_nav_pickups"
        android:title="@string/nav_pickups" />
    <item
        android:id="@+id/nav_alerts"
        android:icon="@drawable/ic_nav_alerts"
        android:title="@string/nav_alerts" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
